syntax = "proto3";

package product;

service ProductService{
  rpc reduceQuantity(ReduceOrder) returns (Void) {}
  rpc getProductData(ID) returns (ProductData) {}
}


message ID{
  string id = 1;
}

message ReduceOrder{
  string id = 1;
  int32 quantity = 2;
}

message ProductData{
  string _id = 1;
  string name = 2;
}

message Void{}

